# tree-sitter-tql

./: .gitignore  .prettierrc.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  go.mod  grammar.js  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
.claude/: CLAUDE.md  format-hook.sh  settings.json
.config/: wt.toml
.github/workflows/: ci.yml  publish.yml  release.yaml  update-zed-extension.yml
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tql/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterTQLTests/: TreeSitterTQLTests.swift
changelog/: config.yaml
changelog/releases/v1.0.0/: manifest.yaml  notes.md
changelog/unreleased/: safer-development-tooling.md
examples/: test_basic.tql  test_block.tql  test_comment_export.tql  test_comments.tql  test_from.tql  test_from2.tql  test_if.tql  test_only_comments.tql  test_simple_comment.tql  test_slash.tql
languages/tql/: injections.scm
queries/tql/: injections.scm
scripts/: generate-folds.mjs  generate-highlights.mjs  generate-indents.mjs  generate-injections.mjs  generate-locals.mjs  set-version.mjs
src/: grammar.json  node-types.json  parser.c
test/corpus/: assignments.txt  basic_operators.txt  comments.txt  control_flow.txt  entities_and_modules.txt  expressions.txt  frontmatter.txt  group_and_aggregation.txt  if_else_operators.txt  in_operator.txt  literals.txt  multiline.txt  network_literals.txt  real_world_examples.txt  simple_basics.txt
(+9 files in other folders)
