[package]
name = "tree-sitter-tql"
description = "Tree-sitter grammar for the Tenzir Query Language (TQL)"
version = "1.0.0"
authors = ["Tenzir <engineering@tenzir.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tql"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tenzir/tree-sitter-tql"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.2"
